@@ -2,11 +2,11 @@ package uk.gov.hmcts.reform.finrem.caseorchestration.handler;
 
 import com.fasterxml.jackson.databind.ObjectMapper;
 import com.fasterxml.jackson.datatype.jsr310.JavaTimeModule;
-import org.junit.Before;
-import org.junit.Test;
-import org.junit.runner.RunWith;
+import org.junit.jupiter.api.BeforeEach;
+import org.junit.jupiter.api.Test;
+import org.junit.jupiter.api.extension.ExtendWith;
 import org.mockito.Mock;
-import org.mockito.junit.MockitoJUnitRunner;
+import org.mockito.junit.jupiter.MockitoExtension;
 import uk.gov.hmcts.reform.finrem.caseorchestration.ccd.callback.CallbackType;
 import uk.gov.hmcts.reform.finrem.caseorchestration.controllers.GenericAboutToStartOrSubmitCallbackResponse;
 import uk.gov.hmcts.reform.finrem.caseorchestration.mapper.FinremCaseDetailsMapper;
@@ -46,21 +46,19 @@ import java.time.LocalDateTime;
 import java.util.ArrayList;
 import java.util.List;
 import java.util.UUID;
-import java.util.stream.Collectors;
 import java.util.stream.Stream;
 
 import static org.hamcrest.MatcherAssert.assertThat;
 import static org.hamcrest.Matchers.hasSize;
 import static org.hamcrest.Matchers.is;
 import static org.mockito.Mockito.when;
+import static uk.gov.hmcts.reform.finrem.caseorchestration.TestConstants.AUTH_TOKEN;
+import static uk.gov.hmcts.reform.finrem.caseorchestration.TestConstants.CASE_ID;
+import static uk.gov.hmcts.reform.finrem.caseorchestration.TestConstants.TEST_USER_ID;
+import static uk.gov.hmcts.reform.finrem.caseorchestration.test.Assertions.assertCanHandle;
 
-@RunWith(MockitoJUnitRunner.class)
-public class UploadContestedCaseDocumentsAboutToSubmitHandlerTest {
-
-    public static final String AUTH_TOKEN = "AuthTokien";
-
-    private static final String USER_ID = "testUserId";
-    public static final String CASE_ID = "1234567890";
+@ExtendWith(MockitoExtension.class)
+class UploadContestedCaseDocumentsAboutToSubmitHandlerTest {
 
     @Mock
     protected UploadedDocumentService uploadedDocumentHelper;
@@ -95,8 +93,8 @@ public class UploadContestedCaseDocumentsAboutToSubmitHandlerTest {
     private FinremCaseData caseData;
     private final List<UploadCaseDocumentCollection> screenUploadDocumentList = new ArrayList<>();
 
-    @Before
-    public void setup() {
+    @BeforeEach
+    void setup() {
         caseDetails = buildCaseDetails();
         caseDetailsBefore = buildCaseDetails();
         caseData = caseDetails.getData();
@@ -116,31 +114,21 @@ public class UploadContestedCaseDocumentsAboutToSubmitHandlerTest {
                     intervenerOneChronologiesStatementHandler, intervenerTwoChronologiesStatementHandler,
                     intervenerThreeChronologiesStatementHandler, intervenerFourChronologiesStatementHandler,
                     intervenerOneFdrHandler, caseDocumentHandler, fdrDocumentsHandler)
-                .collect(Collectors.toList());
+                .toList();
         FinremCaseDetailsMapper finremCaseDetailsMapper =
             new FinremCaseDetailsMapper(new ObjectMapper().registerModule(new JavaTimeModule()));
         uploadContestedCaseDocumentsHandler =
             new UploadContestedCaseDocumentsAboutToSubmitHandler(finremCaseDetailsMapper,
                 documentHandlers, uploadedDocumentHelper, caseAssignedRoleService);
-
     }
 
     @Test
-    public void givenACcdCallbackContestedCase_WhenAnAboutToSubmitEventUploadCaseDocument_thenHandlerCanHandle() {
-        assertThat(uploadContestedCaseDocumentsHandler
-                .canHandle(CallbackType.ABOUT_TO_SUBMIT, CaseType.CONTESTED, EventType.UPLOAD_CASE_FILES),
-            is(true));
+    void testHandlerCanHandle() {
+        assertCanHandle(uploadContestedCaseDocumentsHandler, CallbackType.ABOUT_TO_SUBMIT, CaseType.CONTESTED, EventType.UPLOAD_CASE_FILES);
     }
 
     @Test
-    public void givenACcdCallbackConsentedCase_WhenAnAboutToSubmitEventUploadCaseDocument_thenHandlerCanNotHandle() {
-        assertThat(uploadContestedCaseDocumentsHandler
-                .canHandle(CallbackType.ABOUT_TO_SUBMIT, CaseType.CONSENTED, EventType.UPLOAD_CASE_FILES),
-            is(false));
-    }
-
-    @Test
-    public void givenAnNonConfidentialUploadCaseFile_WhenFdr_thenFdrCollectionsSet() {
+    void givenAnNonConfidentialUploadCaseFile_WhenFdr_thenFdrCollectionsSet() {
         screenUploadDocumentList.add(createContestedUploadDocumentItem(CaseDocumentType.CHRONOLOGY,
             null, YesOrNo.NO, YesOrNo.YES, null));
         screenUploadDocumentList.add(createContestedUploadDocumentItem(CaseDocumentType.FORM_G,
@@ -163,7 +151,7 @@ public class UploadContestedCaseDocumentsAboutToSubmitHandlerTest {
     }
 
     @Test
-    public void givenAnNonConfidentialUploadCaseFile_WhenActiveUserIsApplicantAndScreenPartyIsNull_thenApplicantCollectionsSet() {
+    void givenAnNonConfidentialUploadCaseFile_WhenActiveUserIsApplicantAndScreenPartyIsNull_thenApplicantCollectionsSet() {
         screenUploadDocumentList.add(createContestedUploadDocumentItem(CaseDocumentType.CHRONOLOGY,
             null, YesOrNo.NO, YesOrNo.NO, null));
         screenUploadDocumentList.add(createContestedUploadDocumentItem(CaseDocumentType.FORM_G,
@@ -186,7 +174,7 @@ public class UploadContestedCaseDocumentsAboutToSubmitHandlerTest {
     }
 
     @Test
-    public void givenAnNonConfidentialUploadCaseFile_WhenActiveUserIsRespondentAndScreenPartyIsNull_thenRespondentCollectionsSet() {
+    void givenAnNonConfidentialUploadCaseFile_WhenActiveUserIsRespondentAndScreenPartyIsNull_thenRespondentCollectionsSet() {
         screenUploadDocumentList.add(createContestedUploadDocumentItem(CaseDocumentType.CHRONOLOGY,
             null, YesOrNo.NO, YesOrNo.NO, null));
         screenUploadDocumentList.add(createContestedUploadDocumentItem(CaseDocumentType.FORM_G,
@@ -209,7 +197,7 @@ public class UploadContestedCaseDocumentsAboutToSubmitHandlerTest {
     }
 
     @Test
-    public void givenAnNonConfidentialUploadCaseFile_WhenActiveUserIsIntervSol1AndScreenPartyIsNull_thenIntervSol1CollectionsSet() {
+    void givenAnNonConfidentialUploadCaseFile_WhenActiveUserIsIntervSol1AndScreenPartyIsNull_thenIntervSol1CollectionsSet() {
         screenUploadDocumentList.add(createContestedUploadDocumentItem(CaseDocumentType.CHRONOLOGY,
             null, YesOrNo.NO, YesOrNo.NO, null));
         screenUploadDocumentList.add(createContestedUploadDocumentItem(CaseDocumentType.FORM_G,
@@ -233,7 +221,7 @@ public class UploadContestedCaseDocumentsAboutToSubmitHandlerTest {
     }
 
     @Test
-    public void givenAnNonConfidentialUploadCaseFile_WhenActiveUserIsIntervSol2AndScreenPartyIsNull_thenIntervSol2CollectionsSet() {
+    void givenAnNonConfidentialUploadCaseFile_WhenActiveUserIsIntervSol2AndScreenPartyIsNull_thenIntervSol2CollectionsSet() {
         screenUploadDocumentList.add(createContestedUploadDocumentItem(CaseDocumentType.CHRONOLOGY,
             null, YesOrNo.NO, YesOrNo.NO, null));
         screenUploadDocumentList.add(createContestedUploadDocumentItem(CaseDocumentType.FORM_G,
@@ -256,7 +244,7 @@ public class UploadContestedCaseDocumentsAboutToSubmitHandlerTest {
     }
 
     @Test
-    public void givenAnNonConfidentialUploadCaseFile_WhenActiveUserIsIntervSol3AndScreenPartyIsNull_thenIntervSol3CollectionsSet() {
+    void givenAnNonConfidentialUploadCaseFile_WhenActiveUserIsIntervSol3AndScreenPartyIsNull_thenIntervSol3CollectionsSet() {
         screenUploadDocumentList.add(createContestedUploadDocumentItem(CaseDocumentType.CHRONOLOGY,
             null, YesOrNo.NO, YesOrNo.NO, null));
         screenUploadDocumentList.add(createContestedUploadDocumentItem(CaseDocumentType.FORM_G,
@@ -279,7 +267,7 @@ public class UploadContestedCaseDocumentsAboutToSubmitHandlerTest {
     }
 
     @Test
-    public void givenAnNonConfidentialUploadCaseFile_WhenActiveUserIsIntervSol4AndScreenPartyIsNull_thenIntervSol4CollectionsSet() {
+    void givenAnNonConfidentialUploadCaseFile_WhenActiveUserIsIntervSol4AndScreenPartyIsNull_thenIntervSol4CollectionsSet() {
         screenUploadDocumentList.add(createContestedUploadDocumentItem(CaseDocumentType.CHRONOLOGY,
             null, YesOrNo.NO, YesOrNo.NO, null));
         screenUploadDocumentList.add(createContestedUploadDocumentItem(CaseDocumentType.FORM_G,
@@ -302,7 +290,7 @@ public class UploadContestedCaseDocumentsAboutToSubmitHandlerTest {
     }
 
     @Test
-    public void givenAnNonConfidentialUploadCaseFile_WhenActiveUserIsCaseWorkerScreenPartyIsNull_thenCaseCollectionsSet() {
+    void givenAnNonConfidentialUploadCaseFile_WhenActiveUserIsCaseWorkerScreenPartyIsNull_thenCaseCollectionsSet() {
         screenUploadDocumentList.add(createContestedUploadDocumentItem(CaseDocumentType.CHRONOLOGY,
             null, YesOrNo.NO, YesOrNo.NO, null));
         screenUploadDocumentList.add(createContestedUploadDocumentItem(CaseDocumentType.FORM_G,
@@ -325,7 +313,7 @@ public class UploadContestedCaseDocumentsAboutToSubmitHandlerTest {
     }
 
     @Test
-    public void givenAnFdrCaseFile_WhenActiveUserIsIntervener1_thenIntv1FdrCollectionsSet() {
+    void givenAnFdrCaseFile_WhenActiveUserIsIntervener1_thenIntv1FdrCollectionsSet() {
         screenUploadDocumentList.add(createContestedUploadDocumentItem(CaseDocumentType.CHRONOLOGY,
             null, YesOrNo.NO, YesOrNo.YES, null));
         screenUploadDocumentList.add(createContestedUploadDocumentItem(CaseDocumentType.FORM_G,
@@ -352,7 +340,7 @@ public class UploadContestedCaseDocumentsAboutToSubmitHandlerTest {
     }
 
     @Test
-    public void givenAnNonConfidentialUploadCaseFile_WhenActiveUserIsApplicantAndScreenPartyIsRespondent_thenApplicantCollectionsSet() {
+    void givenAnNonConfidentialUploadCaseFile_WhenActiveUserIsApplicantAndScreenPartyIsRespondent_thenApplicantCollectionsSet() {
         screenUploadDocumentList.add(createContestedUploadDocumentItem(CaseDocumentType.CHRONOLOGY,
             CaseDocumentParty.RESPONDENT, YesOrNo.NO, YesOrNo.NO, null));
         screenUploadDocumentList.add(createContestedUploadDocumentItem(CaseDocumentType.FORM_G,
@@ -375,7 +363,7 @@ public class UploadContestedCaseDocumentsAboutToSubmitHandlerTest {
     }
 
     @Test
-    public void givenUploadFileTrialBundleSelected_WhenAboutToSubmit_ThenShowTrialBundleErrorMessage() {
+    void givenUploadFileTrialBundleSelected_WhenAboutToSubmit_ThenShowTrialBundleErrorMessage() {
 
         FinremCallbackRequest callbackRequest = buildCallbackRequest();
         FinremCaseDetails caseDetails = callbackRequest.getCaseDetails();
@@ -390,12 +378,12 @@ public class UploadContestedCaseDocumentsAboutToSubmitHandlerTest {
             response = uploadContestedCaseDocumentsHandler.handle(callbackRequest, AUTH_TOKEN);
 
         assertThat(response.getErrors().size(), is(1));
-        assertThat(response.getErrors().iterator().next(),
+        assertThat(response.getErrors().getFirst(),
             is(UploadContestedCaseDocumentsAboutToSubmitHandler.TRIAL_BUNDLE_SELECTED_ERROR));
     }
 
     @Test
-    public void givenUploadFileWithoutTrialBundle_WhenAboutToSubmit_ThenNoErrors() {
+    void givenUploadFileWithoutTrialBundle_WhenAboutToSubmit_ThenNoErrors() {
 
         FinremCallbackRequest callbackRequest = buildCallbackRequest();
         FinremCaseDetails caseDetails = callbackRequest.getCaseDetails();
@@ -416,7 +404,7 @@ public class UploadContestedCaseDocumentsAboutToSubmitHandlerTest {
     }
 
     @Test
-    public void givenUploadFileWithAdministrativeDocTypes_ThenErrors() {
+    void givenUploadFileWithAdministrativeDocTypes_ThenErrors() {
 
         FinremCallbackRequest callbackRequest = buildCallbackRequest();
         FinremCaseDetails caseDetails = callbackRequest.getCaseDetails();
@@ -431,12 +419,12 @@ public class UploadContestedCaseDocumentsAboutToSubmitHandlerTest {
             response = uploadContestedCaseDocumentsHandler.handle(callbackRequest, AUTH_TOKEN);
 
         assertThat(response.getErrors().size(), is(1));
-        assertThat(response.getErrors().iterator().next(),
+        assertThat(response.getErrors().getFirst(),
             is("Attendance Sheets cannot be uploaded using this event"));
     }
 
     @Test
-    public void givenUploadFileNoDocSelected_WhenAboutToSubmit_ThenShowNoDocErrorMessage() {
+    void givenUploadFileNoDocSelected_WhenAboutToSubmit_ThenShowNoDocErrorMessage() {
 
         FinremCallbackRequest callbackRequest = buildCallbackRequest();
         FinremCaseDetails caseDetails = callbackRequest.getCaseDetails();
@@ -449,12 +437,12 @@ public class UploadContestedCaseDocumentsAboutToSubmitHandlerTest {
             response = uploadContestedCaseDocumentsHandler.handle(callbackRequest, AUTH_TOKEN);
 
         assertThat(response.getErrors().size(), is(1));
-        assertThat(response.getErrors().iterator().next(),
+        assertThat(response.getErrors().getFirst(),
             is(UploadContestedCaseDocumentsAboutToSubmitHandler.NO_DOCUMENT_ERROR));
     }
 
     @Test
-    public void shouldSetDefaultsForWithoutPrejudiceOffersCorrectly() {
+    void shouldSetDefaultsForWithoutPrejudiceOffersCorrectly() {
         UploadCaseDocument uploadCaseDocument = UploadCaseDocument.builder()
             .caseDocuments(new CaseDocument())
             .caseDocumentType(CaseDocumentType.WITHOUT_PREJUDICE_OFFERS)
@@ -510,7 +498,7 @@ public class UploadContestedCaseDocumentsAboutToSubmitHandlerTest {
     private CaseAssignedUserRolesResource getCaseAssignedUserRolesResource(String caseRole) {
         return CaseAssignedUserRolesResource.builder()
             .caseAssignedUserRoles(List.of(CaseAssignedUserRole.builder()
-                .userId(USER_ID)
+                .userId(TEST_USER_ID)
                 .caseRole(caseRole)
                 .caseDataId(CASE_ID)
                 .build()))
